# qt-effects-gallery

./: README.md  data.json  index.html  readme.txt  scripts.js  styles.css
src/blur_shadow/: CMakeLists.txt  DigitalSpeed.qml  Main.qml  main.cpp
src/text_gradient/: CMakeLists.txt  Main.qml  TextGradient.qml  ic_dashboard.qmlproject  main.cpp
src/text_gradient/shaders/: README.md  lineGradient.frag  lineGradient.frag.qsb
